policies/required-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: required-labels
  annotations:
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/description: >-
      Labels are required on all Kubernetes resources to allow for proper RBAC
spec:
  validationFailureAction: audit
  rules:
  - name: team-label
    match:
      resources:
        name: "*" # Applies to all objects
    exclude:
      resources:
        namespaces:
        - kube-system
        kind:
        - applications.argoproj.io
    validate:
      message: "label `team` is required"
      pattern:
        metadata:
          labels:
            team: "?*"
